[package]
name = "pgpkeydump"
description = "A tool for dumping PGP keys as JSON"
license = "Apache-2.0"
version = "0.2.3"
edition = "2021"

[package.metadata.release]
publish = false
push = true

[dependencies]
anyhow = "1"
chrono = "0.4.34"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4"
sequoia-openpgp = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
